--- a/website/Web_Site/Web_App/static/Web_App/style.css
+++ b/website/Web_Site/Web_App/static/Web_App/style.css
@@ -27,7 +27,7 @@ body { /* parent */
  /* Style the navigation menu */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-image: linear-gradient(to right, #333, black);
   position: relative;
 }
 
@@ -37,12 +37,17 @@ body { /* parent */
 }
 
 /* Style navigation menu links */
+
+/* Title name is in here */
 .topnav a {
-  color: white;
+  color: #f47a42;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
   display: block;
+
+
+
 }
 
 /* Style the hamburger menu */
@@ -60,14 +65,9 @@ body { /* parent */
   color: black;
 }
 
+
 /* Style the active link (or home/logo) */
 .active {
-  background-color: #4CAF50;
-  color: white;
-
-
-}
-
-#home {
-
-}
+    background-image: linear-gradient(to right, #333, black);
+  /*background-color: #333;
+*/}
