--- a/website/Web_Site/Web_App/static/Web_App/style.css
+++ b/website/Web_Site/Web_App/static/Web_App/style.css
@@ -1,5 +1,7 @@
 body { /* parent */
-    background-color: rgba(0, 41, 59, 1); margin: 0;
+    border-bottom: 2px solid #ff7d28;
+    background-color: #333; margin: 0;
+    background-image: linear-gradient(to bottom, #333, black);
     width: 100%; height: auto;
 }
 .element { /* body */
@@ -29,6 +31,7 @@ body { /* parent */
   overflow: hidden;
   background-image: linear-gradient(to right, #333, black);
   position: relative;
+
 }
 
 /* Hide the links inside the navigation menu (except for logo/home) */
@@ -40,11 +43,12 @@ body { /* parent */
 
 /* Title name is in here */
 .topnav a {
-  color: #f47a42;
+  color: #ff7d28;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
   display: block;
+
 
 
 
@@ -57,17 +61,21 @@ body { /* parent */
   position: absolute;
   right: 0;
   top: 0;
+
 }
 
 /* Add a grey background color on mouse-over */
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+
+
 }
 
 
 /* Style the active link (or home/logo) */
 .active {
     background-image: linear-gradient(to right, #333, black);
+
+
   /*background-color: #333;
 */}
