--- a/website/Web_Site/Web_App/static/Web_App/style.css
+++ b/website/Web_Site/Web_App/static/Web_App/style.css
@@ -1,5 +1,7 @@
 body { /* parent */
-    background-color: rgba(0, 41, 59, 1); margin: 0;
+    border-bottom: 2px solid #ff7d28;
+    background-color: #333; margin: 0;
+    background-image: linear-gradient(to bottom, #333, black);
     width: 100%; height: auto;
 }
 .element { /* body */
@@ -27,8 +29,9 @@ body { /* parent */
  /* Style the navigation menu */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-image: linear-gradient(to right, #333, black);
   position: relative;
+
 }
 
 /* Hide the links inside the navigation menu (except for logo/home) */
@@ -37,12 +40,18 @@ body { /* parent */
 }
 
 /* Style navigation menu links */
+
+/* Title name is in here */
 .topnav a {
-  color: white;
+  color: #ff7d28;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
   display: block;
+
+
+
+
 }
 
 /* Style the hamburger menu */
@@ -52,22 +61,21 @@ body { /* parent */
   position: absolute;
   right: 0;
   top: 0;
+
 }
 
 /* Add a grey background color on mouse-over */
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+
+
 }
+
 
 /* Style the active link (or home/logo) */
 .active {
-  background-color: #4CAF50;
-  color: white;
+    background-image: linear-gradient(to right, #333, black);
 
 
-}
-
-#home {
-
-}
+  /*background-color: #333;
+*/}
