--- a/website/Web_Site/Web_App/static/Web_App/about.css
+++ b/website/Web_Site/Web_App/static/Web_App/about.css
@@ -57,7 +57,6 @@ body #bodyParagraphs {
   font-size: 17px;
   display: block;
 
-
 }
 
 /* Style the hamburger menu */
@@ -81,6 +80,10 @@ body #bodyParagraphs {
 /* Style the active link (or home/logo) */
 .active {
     background-image: linear-gradient(to right, #333, black);
-
-  /*background-color: #333;
 */}
+
+footer p {
+
+    color: white;
+
+}
